[gd_scene load_steps=6 format=3 uid="uid://ficsuubdgdp1"]

[ext_resource type="Script" uid="uid://dtoaqjg1q44it" path="res://node_2d.gd" id="1_bmsxf"]
[ext_resource type="Texture2D" uid="uid://yr3d2gdfsoy4" path="res://assets/apple1.png" id="2_kul7u"]
[ext_resource type="Texture2D" uid="uid://c58bpd5jbr21l" path="res://assets/apple2.png" id="3_kixnd"]
[ext_resource type="Texture2D" uid="uid://cvqn2oc2i16g5" path="res://assets/apple3.png" id="4_q82pg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kixnd"]
radius = 47.0425

[node name="apple" type="Node2D"]
script = ExtResource("1_bmsxf")

[node name="Apple1" type="Sprite2D" parent="."]
position = Vector2(0, 13)
rotation = 3.14159
texture = ExtResource("2_kul7u")

[node name="Area2D" type="Area2D" parent="Apple1"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Apple1/Area2D"]
position = Vector2(1, 8)
shape = SubResource("CircleShape2D_kixnd")

[node name="appleParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 1
texture = ExtResource("3_kixnd")
one_shot = true
direction = Vector2(0, 1)
gravity = Vector2(0, 200)
initial_velocity_min = 150.0
initial_velocity_max = 200.0
angular_velocity_min = -400.0
angular_velocity_max = 400.0
angle_min = 180.0
angle_max = 180.0

[node name="appleParticles2D2" type="CPUParticles2D" parent="."]
emitting = false
amount = 1
texture = ExtResource("4_q82pg")
one_shot = true
direction = Vector2(0, 1)
gravity = Vector2(0, 200)
initial_velocity_min = 150.0
initial_velocity_max = 200.0
angular_velocity_min = -400.0
angular_velocity_max = 400.0
angle_min = 180.0
angle_max = 180.0

[connection signal="body_entered" from="Apple1/Area2D" to="." method="_on_area_2d_body_entered"]
